LU-1488 mdc: fix fid_res_name_eq() issue.

Original error message:
LustreError: 25302:0:(namei.c:256:ll_mdc_blocking_ast())
ns: lustre-MDT0000-mdc-ffff81021762a000 lock:
The issue cause by commit ef8bd11416bae8c03a65682f3a10a4da39922b45.
fid_res_name_eq() use wrong way to compare fid & res_name.

Signed-off-by: yang sheng <ys@whamcloud.com>
Change-Id: Iacba148b6c3ba7fa775d2b9a4a58bdbf67434d7c
Reviewed-on: http://review.whamcloud.com/3522
Tested-by: Hudson
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Fan Yong <yong.fan@whamcloud.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Johann Lombardi <johann@whamcloud.com>